# readit

./: .README.rst.swo  .README.rst.swp  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  database.py  readit.py  readit_real.py  readit_updated.py  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test_readit.py
.github/workflows/: deploy.yml  main.yml
argparse/: argparse_demo.py
docs/: Makefile  README.rst  Readit.rst  __init__.rst  cli.rst  conf.py  database.rst  get_involved.rst  index.rst  installation.rst  make.bat  readit.rst  usage.rst
manager/: __init__.py  database.py  readit.py
readit/: __init__.py  cli.py  database.py  view.py
scripts/: dbsetup
tests/: test_db.py  test_readit.py
