[metadata]
name = readit
description = Readit - Command Line Bookmark Manager Tool
home-page = https://github.com/projectreadit/readit
author = Ganesh, Shital, Daivshala
author-email = ganeshhubale03@gmail.com
long_description = file: README.rst
long_description_content_type = text/x-rst
license = GNU General Public License v3.0
license-file = LICENSE
keywords =
    clitool
    bookmark
    readit
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
	Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Environment :: Console
    Topic :: Internet
    Topic :: Utilities

[options]
zip_safe = false
include_package_data = true
packages = find:
python_requires = >= 3.6
setup_requires = setuptools_scm
install_requires =
    beautifultable
    click
    requests

[options.entry_points]
console_scripts =
    readit = readit:main

[flake8]
max_line_length = 100
